# hc-rs

./: Cargo.toml  README.md  build_deploy_pi.sh
src/: main.rs
streamdeck/: Cargo.toml
streamdeck/src/: lib.rs
theater/: Cargo.toml
theater/src/: denon.rs  epson.rs  lib.rs
