workspace = { members = ["streamdeck", "theater"] }
[package]
name = "hc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamdeck = { path = "./streamdeck" }
theater = { path = "./theater" }
ctrlc = "3.4.2"
log = "0.4.20"
simplelog = "0.12.1"
anyhow = "1.0.80"
