[package]
name = "theater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.31.0", features = ["serialize"] }
urlencoding = "2.1.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
num = "0.4.1"
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = { version = "0.6.0" }
log = "0.4.20"
anyhow = "1.0.80"
